k8s-lab/php-guestbook/guestbook-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  labels:
    name: guestbook
