k8s-lab/php-guestbook/frontend-service.yaml
# SOURCE: https://cloud.google.com/kubernetes-engine/docs/tutorials/guestbook
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: guestbook
  annotations:
    com.illumio.role: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # type: NodePort # Use this with the ingress controller
  type: LoadBalancer
  ports:
    # the port that this service should serve on
  - port: 80
  selector:
    app: guestbook
    tier: frontend
